Bug 66205 - EDITING: Editing a telephone number in a cell and pressing enter results in text disappearing
Summary: EDITING: Editing a telephone number in a cell and pressing enter results in t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: All All
: high major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords: bibisected, regression
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-06-26 13:11 UTC by Leopoldo Saggin
Modified: 2015-12-17 07:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File for testing the bug described in the text (8.00 KB, application/vnd.ms-excel)
2013-06-26 13:11 UTC, Leopoldo Saggin
Details
bisectlog (2.81 KB, text/plain)
2013-07-04 22:31 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leopoldo Saggin 2013-06-26 13:11:59 UTC
Created attachment 81473 [details]
File for testing the bug described in the text

The attached file was initially prepared with LibO 3.5 and edited subsequently in 3.5.x, 3.6.x and 4.0.x versions where I did not find any problem if I tried to edit (= update, correct) one or more of the phone numbers which are contained by doing the following operations:
1. Select the cell to edit by using the mouse
2. Digit the "function key" F2 to edit the number
3. Insert/change one or more digits
4. Hit the key <enter> to confirm the updating

By performing the same sequence of operations with LO 4.1 RC1, causes a cell "blanking" after the key <enter> was hit, even if the number is still present as one can see by watching at the "formula bar".
Anyway, by re-digiting F2 followed by a new <enter> hit, makes the phone number to reappear.
I had not clear results if I perform the same operation in cells containing pure text or pure numerical values.
Attached is only part of the file I'm currently use so one can tries to reproduce the bug.

Leopoldo Saggin aka Topoldo
Comment 1 Leopoldo Saggin 2013-06-28 13:01:32 UTC
I performed some more tests:
1. The bug I described in the previous post also appears in a .csv file (not only a .xls) which was imported directly into LO 4.1.0RC1. This excludes the possibility of an incorrect "porting" of some format features ofthe file from an old versions of LO to this new one, because this .csv was opened directly in LO 4.1.0 RC1.
2. I tried to reproduce the same problem on numeric and (pure) text data cells and I wasn't able to reproduce this bug. So it seems specific for numbers in columns formatted as text.
3. With a new test I could restrict further the condition of this bug.
In fact if I fill (not edit, just insert) a cell with a number starting with a '+' followed by digits separated by spaces like one can do when he/she writes some telephone number (for example: +30 049 827-0000) nothing appears in the cell even if it is present in the "formula bar" By digiting F2 function key and hitting <enter> makes it to appear.
This happens also if you create a number prefixed with a '-' like -39 049 827-6000 BUT it does not happens if at the beginning of the number there is an asterisk (for example *39 049 827-6000)
So + and - seems the causes of the bug.
Thx for the attention.

Leopoldo Saggin aka  Topoldo
Comment 2 Joel Madero 2013-06-28 17:55:46 UTC
wow - nice catch. Weird thing is, if you change workspaces or minimize the document - the # comes back. Strange stuff going on here.

Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.2.0.0.alpha0+Build ID: b0a1666f756aa5f5315366eca9d7d02ddd55d2b
Date:   Tue May 28 08:51:01 2013 +0300 
Platform: Bodhi Linux 2.2 x64

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Critical - looks like loss of data, could cause user to think data is lost even though it's there. Very normal action (just editing the cell)
High

Keywords - regression

Whiteboard Status -

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 3 Joel Madero 2013-06-28 17:57:06 UTC
Also happens if you just double click into cell - updating title
Comment 4 Leopoldo Saggin 2013-06-28 20:17:40 UTC
Just to stress that the "phenomenon" I reported happens also if you prefix a number (treated as a phone number) not only with '+' but ALSO with '-', while this does not happen prefixing with '*'. I did not check with '/' or '^' (ie all the signs for mathematical operations).
So IMHO the bug is probably depends on a mixture of signs indicating positive or negative numbers (+ or -) with number(s) treated as text like (but not only) in telephone numbers.

Leopoldo Saggin aka Topoldo
Comment 5 Markus Mohrhard 2013-07-02 03:33:27 UTC
Does this happen before 4.1.0.1. It would be great to get a bibisect for this bug.
Comment 6 Joel Madero 2013-07-02 04:30:33 UTC
Tested both 4.0.3 and 4.0.4 and no, it seems to work fine there. 

Tested again on 4.2 master which I just built yesterday - still exists

As for bibisect - zsyncing the Canonical bibisect now, unfortunately it downloads brutally slow taking 8+ hours to get the 7ish gigs. I'll try to test tomorrow if the package completes
Comment 7 Jorendc 2013-07-04 22:31:51 UTC
Created attachment 82052 [details]
bisectlog

Had some problems with my binrepo (daily bisect) too. Downloaded completely overnew resulted in a nice brand new and working package :).

bisect range: http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=8d68b885b021a60af0fd199a167cbaeac1f15116..230f3ea249cd1f045ba30aced35935cdc32ddd87

Kind regards,
Joren
Comment 8 Leopoldo Saggin 2013-07-23 14:19:27 UTC
I'm probably naive, but I wonder if there is any possibility that the bug I described herein is someway related to the bug: N. 67094 "Spreadsheet Reads Any Number of Spaces in Cell as a Single Space". The uncorrect interpretation of the + (plus) sign is similar in these two cases.
Leopoldo Saggin aka Topoldo
Comment 9 Joel Madero 2013-07-23 15:42:11 UTC
hm - I will test with the patch that was just committed for the other bug and report back
Comment 10 Markus Mohrhard 2013-07-23 16:06:13 UTC
they are surely unrelated.
Comment 11 Joel Madero 2013-08-06 16:12:58 UTC
Adding to MAB list - loss of data in such a simple test case seems to fit the criteria
Comment 12 Eike Rathke (retired, only occasionally showing up) 2013-08-09 16:11:41 UTC
Note that this is not data loss, the data is there and modifications are saved, but the cell content is not displayed after modification, only when the display area is refreshed => lowering the bug's severity from critical to major.
Comment 13 Commit Notification 2013-08-09 18:23:54 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc599dca8b6b46cff35dab01ad26c18ea529b261

resolved fdo#66205 call PostPaintCell() in Set...Cell() data entry



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Eike Rathke (retired, only occasionally showing up) 2013-08-09 18:30:26 UTC
Pending review for 4-1 as https://gerrit.libreoffice.org/5332
Comment 15 Commit Notification 2013-08-10 15:07:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=100ba6a1a52925ac5042c3efb25c8376fd128ff7&h=libreoffice-4-1

resolved fdo#66205 call PostPaintCell() in Set...Cell() data entry


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 07:16:04 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]