resolved fdo#66205 call PostPaintCell() in Set...Cell() data entry

Cell modifications need to chain repaint positions.

Regression introduced with bcf5b54b47eda4e39b4f5f4813cb43e1f52f0201 and
related.

Change-Id: I4df633304443ea761ae743ee1271f5777e0da5b2
(cherry picked from commit bc599dca8b6b46cff35dab01ad26c18ea529b261)